--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -9,6 +9,7 @@ body {
     align-items: center;
     width: 100vw;
     height: 100vh;
+    background: radial-gradient(circle at 30% 50%,rgb(168, 163, 163) 20%,rgb(191, 188, 188) 40%,rgb(231, 222, 222) 60%, rgb(255, 255, 255)70%, transparent );
 }
 .gradient {
     position: absolute;
@@ -16,7 +17,7 @@ body {
     left: 0%;
     width: 60%;
     height: 100%;
-    background: radial-gradient(circle at 40% 50%,rgb(168, 163, 163) 20%,rgb(191, 188, 188) 40%,rgb(231, 222, 222) 60%, rgb(255, 255, 255)70%, transparent );
+    
 
 }
 #hamnav {
@@ -297,17 +298,18 @@ body {
 .passage-container {
     width: 100vw;
     height:100vh;
-    background-color: black;
+    background-color: #F2EDE8;
     display: grid;
-    grid-template-rows: 1fr repeat(2, 3fr);
+    grid-template-rows: repeat(2, 3fr);
+    grid-template-columns: 2
 }
 
 .news_title_wrap {
     width: 100%;
-    background-color: #D81818;
+    background-color: #F2EDE8;
     display: grid;
     grid-template-columns: 3fr 1fr 3fr;
-    border-bottom: #1725a5 solid 1px;
+    border-bottom: #000000 solid 1px;
     transform: translate(0, 70%);
 }
 
@@ -321,14 +323,22 @@ body {
     }
 }
 
+.date_wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #F2EDE8;
+    
+}
+
 .date {
-    display: inline-block;
-    margin-top: 7%;
     width: 100%;
     height: 50%;
-    background-color: #1725a5;
-    border-top: #ffffff solid 2px;
-    border-bottom: #ffffff solid 2px;
+    background-color: #F2EDE8;
+    border-top: #000000 solid 2px;
+    border-bottom: #000000 solid 2px;
 }
 
 .news_title {
@@ -343,10 +353,12 @@ body {
 
 .news_session {
     width: 100%;
-    background-color: pink;
+    height: 100%;
+    background-color: #F2EDE8;
     display: grid;
-    grid-template-columns: 3fr 4fr 3fr;
+    grid-template-columns: 2fr 3fr 2fr;
     transform: translate(0, 70%);
+    column-gap: 3%;
 }
 
 .small_grid {
@@ -354,6 +366,39 @@ body {
     background-color: #241078;
     display: grid;
     grid-template-rows: 1fr 1fr;
+}
+
+.img {
+    background-color: #F9303D;
+}
+
+.news_img {
+    width: 100%;
+    height: 100%;
+}
+
+.link {
+    background-color: #F2EDE8;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.link a {
+    margin: 5% 0 0 0;
+    color: #000000;
+}
+
+.link a:first-child {
+    margin: 0;
+}
+
+.big_grid {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 3fr 1fr;
 }
 
 .map {
