--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -135,8 +135,8 @@ body {
 @keyframes magnify {
    
     to {
-        top: 50%;
-        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 5em;
     }
 
 }
