--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
 }
+
+
 .container {
     position: relative;
     display: flex;
@@ -133,14 +135,12 @@ body {
 
 
 @keyframes magnify {
-   
     to {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 2em;
     }
-
 }
 
 .cursor-container {
@@ -204,27 +204,29 @@ body {
     width: 4%;
     height: 6%;
     position: absolute;
-    bottom: 10%;
+    bottom: 16%;
     left: 93%;
-    transform: translate(45%, 0);
 }
 .dot_1 {
     width: 4px;
     height: 4px;
     border-radius: 50%;
     background-color: #D81818;
-    transform: translate(-1%, -10px);
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 .dot_2 {
     width: 4px;
     height: 4px;
     border-radius: 50%;
     background-color: #D81818;
-    transform: translate(-1%, -30px);
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
-
-
-  
 
 .cursor {
     width: 5%;
@@ -269,39 +271,6 @@ body {
         opacity: 0.5;
     }
 }
-/* .cover { 
-    z-index: 10;
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    backdrop-filter: blur(5px);
-}
-.title {
-    font-size: 10em;
-    color: white;
-    text-align: center;
-}
-*/
-
-.passage-container {
-    width: 100vw;
-    height:100vh;
-    background-color: #F2EDE8;
-    display: grid;
-    grid-template-rows: repeat(2, 3fr);
-    grid-template-columns: 2
-}
-
-.news_title_wrap {
-    width: 100%;
-    background-color: #F2EDE8;
-    display: grid;
-    grid-template-columns: 3fr 1fr 3fr;
-    border-bottom: #000000 solid 1px;
-    transform: translate(0, 70%);
-}
 
 .slide {
     animation: slide 1s forwards;
@@ -313,94 +282,14 @@ body {
     }
 }
 
-.date_wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #F2EDE8;
-    
-}
-
-.date {
-    width: 100%;
-    height: 50%;
-    background-color: #F2EDE8;
-    border-top: #000000 solid 2px;
-    border-bottom: #000000 solid 2px;
-}
-
-.news_title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    font-size: 3em;
-    color: #2E2F37;
-}
-
-.news_session {
-    width: 100%;
-    height: 100%;
-    background-color: #F2EDE8;
-    display: grid;
-    grid-template-columns: 2fr 3fr 2fr;
-    transform: translate(0, 70%);
-    column-gap: 3%;
-}
-
-.small_grid {
-    width: 100%;
-    background-color: #241078;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-}
-
-.img {
-    background-color: #F9303D;
-}
-
-.news_img {
-    width: 100%;
-    height: 100%;
-}
-
-.link {
-    background-color: #F2EDE8;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.link a {
-    margin: 5% 0 0 0;
-    color: #000000;
-}
-
-.link a:first-child {
-    margin: 0;
-}
-
-.big_grid {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: 3fr 1fr;
-}
-
 .map {
-    position: absolute;
     width: 100vw;
     height: 100vh;
-    z-index: 20;
 }
+
 .svg-object {
     width: 100%;
 }
-
 
 .intermediary_message_container {
     position: relative;
