--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -287,8 +287,9 @@ body {
     height: 100vh;
 }
 
-.svg-object {
+#svg-object {
     width: 100%;
+    height: 100%;
 }
 
 .intermediary_message_container {
