--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -285,11 +285,24 @@ body {
 .map {
     width: 100vw;
     height: 100vh;
+    position: relative;
 }
 
 #svg-object {
     width: 100%;
     height: 100%;
+}
+
+.card {
+    height: 50%;
+    width: 30%;
+    position: absolute;
+    top: 25%;
+    right: 5%;
+    background-color: #e8e9e3;
+    border-radius: 30px;
+    border: none;
+    box-shadow: 0 0 8px rgb(28, 28, 28);
 }
 
 .intermediary_message_container {
