--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -1,37 +1,48 @@
+* {
+    box-sizing: border-box;
+}
 
+body {
+    margin: 0;
+}
 
-.back {
+.container {
     width: 100vw;
     height: 100vh;
-    background-color: #1b2321;
-    z-index: -1;
-    position: fixed;
-}
-.container {
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
-    background-color: #353741;
-    /* filter: blur(10px); */
-    /* background: linear-gradient(to right, #353741 , #b4b4ba) */
-    /*  radial-gradient(circle at 30% 50%,rgb(168, 163, 163) 20%,rgb(191, 188, 188) 40%,rgb(231, 222, 222) 60%, rgb(255, 255, 255)70%, transparent ); */
+    background-color: #222224;
 }
 
 
+/* 模糊背景 */
+.blur_wrap {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+.blur {
+    filter: blur(20px);
+}
+
+
+/* 专业选择 */
 #selector {
+    width: 50%;
     position: absolute;
     top: 0;
-    height: 50%;
-    width: 40%;
     background-color: rgba(30, 31, 36, 0.6);
     /* background: radial-gradient(circle, rgba(245, 108, 126, 0.2) 30%, rgba(202, 90, 105, 0.3) 60%, rgba(103, 42, 50, 0.4) 80%, rgba(107, 67, 74, 0.6) 90%); */
     border-radius: 0 0 30px 30px;
     box-shadow: 0 0 5px #939497;
-    z-index: 1;
+    z-index: 2;
 }
 #selector p {
     margin-left: 10px;
@@ -40,18 +51,17 @@
     color: #bbbdc5;
     font-size: larger;
 }
-.button_wrap {
-    height: 15%;
-    width: 80%;
+#button_wrap {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding-left: 10%;
     padding-right: 10%;
-    margin-top: 15%;
+    margin-top: 20%;
+    margin-bottom: 20%;
 }
-
-#business {
-    height: 100%;
+.selector_button {
+    height: 50px;
     width: 40%;
     background-color: #a1aaa9;
     color: #d3d4d8;
@@ -59,16 +69,8 @@
     border: none;
     border-radius: 20px;
 }
-#internet {
-    height: 100%;
-    width: 40%;
-    background-color: #a1aaa9;
-    color: #d3d4d8;
-    font-size: medium;
-    border: none;
-    border-radius: 20px;
-}
-   
+ 
+/* 导航 */
 #hamnav {
     width: 100%;
     height: 8%;
