--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -73,54 +73,51 @@ body {
 /* 导航 */
 #hamnav {
     width: 100%;
-    height: 8%;
+    height: 60px;
     position: absolute;
     top: 0;
     left: 0;
     display: grid;
     grid-template-columns: 1fr 12fr 1fr;
     /* border: solid 1px; */
-    /* border-image: linear-gradient(to left, #2d2a2a, #898b89); */
-    border-image-slice: 0 0 100 0;
-
+    /* border-image: linear-gradient(to left, #2d2a2a, #898b89); 
+    border-image-slice: 0 0 100 0;*/
 }
-
 .icons{
-    padding-top: 10px;
+    margin-top: 10px;
     width: 30px;
     height: 30px;
-    animation: nav-down 1s forwards;
+    transform: translate(0, -50px);
 }
-
-#icon_1 {
-    padding-left: 10%;
+.down {
+    animation: down 1s forwards;
 }
-#icon_2 {
-    padding-left: 96%;
-}
-#icon_3 {
-    padding-left: 15%;
-}
-
-
-@keyframes nav-down {
-    0% {
-        transform: translate(0, -50px);
+@keyframes down {
+    to {
+        transform: translate(0, 0); 
     }
 }
+#icon_1 {
+    margin-left: 10%;
+}
+#icon_2 {
+    margin-left: 96%;
+}
+#icon_3 {
+    margin-left: 15%;
+}
 
+/* gpt页面 */
 .chat-container {
     height: 80vh;
     width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     /*background: linear-gradient(rgba(255, 255, 255, 0.133), transparent);*/
     background-color: #6F7279;
     background: linear-gradient(to right,#6F7279, #c4c0c1 );
     border: solid 1px #8a8a8d;
-    position: absolute;
-    top: 12vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     border-radius: 35px;
     overflow: hidden;
     box-shadow: 0px 0px 5px rgb(151, 149, 149);
@@ -128,16 +125,23 @@ body {
 }
 
 .chat-header {
-    background-color: #6F7279;
-    background: linear-gradient(to right,#6F7279, #c4c0c1 );
     height: 10%;
     width: 100%;
+    background-color: #6F7279;
+    background: linear-gradient(to right,#6F7279, #c4c0c1 );
+    font-size: 2em;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #D4D1D3;
     border-bottom: #545458 solid 1.5px;
 }
+
+@media screen and (min-width: 500px) {
+    .chat-header {
+        font-size: 1em;
+    }
+  }
 
 
 /* 渲染对话框 */
