--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -169,6 +169,11 @@ body {
     line-height: 1.5;
     color: #ADABB5;
 }
+@media screen and (min-width: 500px) {
+    .user-message {
+        font-size: 4em;
+    }
+}
 
 .chatgpt-message-container {
     width: 100%;
@@ -185,6 +190,11 @@ body {
     color: #CDCCD0;
     font-size: large;
     line-height: 1.5;
+}
+@media screen and (min-width: 500px) {
+    .chatgpt-message {
+        font-size: 4em;
+    }
 }
 
 .title_wrap {
