--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -165,13 +165,13 @@ body {
     width: 70%;
     margin: 0 0 20px 0;
     padding: 24px 0px 0 20px;
-    font-size: large;
+    font-size: 4em;
     line-height: 1.5;
     color: #ADABB5;
 }
 @media screen and (min-width: 500px) {
     .user-message {
-        font-size: 4em;
+        font-size: larger;
     }
 }
 
@@ -188,12 +188,12 @@ body {
 .chatgpt-message {
     margin: 24px 0 30px 20px;
     color: #CDCCD0;
-    font-size: large;
+    font-size: 4em;
     line-height: 1.5;
 }
 @media screen and (min-width: 500px) {
     .chatgpt-message {
-        font-size: 4em;
+        font-size: larger;
     }
 }
 
