--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -80,9 +80,15 @@ body {
 }
 .icons{
     margin-top: 10px;
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
     transform: translate(0, -50px);
+}
+@media screen and (min-width: 500px) {
+    .icons {
+        width: 30px;
+        height: 30px;  
+    } 
 }
 .down {
     animation: down 1s forwards;
@@ -118,7 +124,7 @@ body {
     overflow: hidden;
     box-shadow: 0px 0px 5px rgb(151, 149, 149);
     opacity: 0.9;
-    margin: 120px 10vw 0 10vw;
+    margin: 150px 10vw 0 10vw;
 }
 @media screen and (min-width: 400px) {
     .chat-container {
@@ -280,10 +286,10 @@ body {
 
 /* 下滑按钮 */
 .scroll {
-    width: 4%;
-    height: 6%;
+    width: 40px;
+    height: 40px;
     position: absolute;
-    bottom: 20%;
+    bottom: 25%;
     left: 93%;
     background-color: rgba(0,0,0,0);
     border: none;    
@@ -301,7 +307,7 @@ body {
     width: 4%;
     height: 6%;
     position: absolute;
-    bottom: 23%;
+    bottom: 28%;
     left: 93%;
 }
 @media screen and (min-width: 500px) {
@@ -338,10 +344,8 @@ body {
     left: 90%;
 }
 .cursor {
-    animation: move 1s infinite forwards;
-    animation-iteration-count: 1; 
+    animation: move 1s forwards;
 }
-
 @keyframes move {
     85% {
         top: 45%;
@@ -365,10 +369,10 @@ body {
     } 
 }
 
+/* 元素滑入 */
 .slide {
     animation: slide 1s forwards;
 }
-
 @keyframes slide {
     to {
         transform: translate(0, 0);
