--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -128,7 +128,7 @@ body {
 }
 @media screen and (min-width: 400px) {
     .chat-container {
-        margin: 70px 10vw 0 10vw;
+        margin: 50px 10vw 0 10vw;
     }
 }
 
@@ -304,8 +304,8 @@ body {
     height: 100%;
 }
 .dots {
-    width: 4%;
-    height: 6%;
+    width: 40px;
+    height: 40px;
     position: absolute;
     bottom: 28%;
     left: 93%;
@@ -379,6 +379,13 @@ body {
     }
 }
 
+
+/* 地图 */
+.map_wrap {
+    width: 100vw;
+    height: 100vh;
+    background-color: #222224;
+}
 .map {
     width: 100vw;
     height: 100vh;
@@ -387,11 +394,16 @@ body {
 #area {
     width: 100%;
     text-align: center;
+    font-weight: 600;
+    font-size: 2em;
+    color: rgba(209, 198, 227, 0.5);
 }
 #company {
     width: 100%;
     text-align: center;
     white-space: pre-line;
+    font-size: larger;
+    color: rgba(161, 152, 175, 0.5);
 }
 
 #svg-object {
@@ -405,12 +417,19 @@ body {
     position: absolute;
     top: 25%;
     right: 5%;
-    background-color: #e8e9e3;
+    background-color: rgba(82, 74, 96, 0.5);
     border-radius: 30px;
-    border: none;
+    border: solid 2px rgba(118, 106, 137, 0.5);
     box-shadow: 0 0 8px rgb(28, 28, 28);
     transform: translate(0, 50px);
     animation: showup 0.3s forwards;
+    background: radial-gradient(circle at 90% 90%, rgba(92, 86, 103, 0.5)10%, rgba(82, 74, 96, 0.5) 40%, rgba(101, 93, 118, 0.5) 60%,rgba(52, 47, 61, 0.5) 90%);
+}
+@media screen and (min-width: 500px) {
+    .card {
+        height: 70%;
+        top: 15%; 
+    } 
 }
 .test {
     height: 50px;
