--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -185,6 +185,7 @@ body {
     width: 100%;
     background-color: #6F7279;
     display: flex;
+    flex-wrap: wrap;
 }
 .chatgpt-avatar {
     width: 30px;
@@ -201,6 +202,57 @@ body {
     .chatgpt-message {
         font-size: larger;
     }
+}
+
+/* 推文链接 */
+.passages_wrap {
+    width: 100%;
+}
+.passages {
+    width: 60%;
+    margin: 15px 0 75px 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.passage {
+    position: relative;
+    width: 90%;
+    height: 80px;
+    background-color: rgba(47, 44, 51, 0.5);
+    border: solid 1px #66686e;
+    border-radius: 10px;
+    margin: -25px 0;
+    transition: z-index 1s, width 1s, height 1s, background 1s;
+    display: flex;
+}
+.passage:nth-child(2) {
+    transform: translate(3%, 0);
+}
+.passage:nth-child(3) {
+    transform: translate(6%, 0);
+}
+.passage:nth-child(4) {
+    transform: translate(9%, 0);
+}
+.passage:nth-child(5) {
+    transform: translate(12%, 0);
+}
+.passage_image {
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+}
+.passage_title {
+    margin-right: 30px;
+    color: #ededf0;
+}
+
+.passage:hover {
+        z-index: 3;
+        width: 95%;
+        height: 100px;
+        background: linear-gradient(rgba(185, 182, 189, 0.9), rgba(47, 44, 51, 0.9));
 }
 
 .title_wrap {
