--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -515,6 +515,13 @@ body {
     margin: 10px 20px 20px 27px;
     color: #134284;
 }
+.secard_png {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 20px;
+    right: 20px;
+}
 .href {
     width: 50px;
     height: 50px;
