--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -5,6 +5,10 @@
 body {
     margin: 0;
 }
+@font-face {
+    font-family: 'Zhimingxing';
+    src: url(C:\Users\Aegalnc\Desktop\data_journalism_competition\font.ttf);
+}
 
 .container {
     width: 100vw;
@@ -268,6 +272,7 @@ body {
     color: #CDCCD0;
     font-size: large;
     white-space: nowrap;
+    font-family: 'Zhimingxing', sans-serif;
 }
 .magnify {
     animation: magnify 2s forwards;
@@ -279,6 +284,7 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         font-size: 7em;
+        font-family: 'Zhimingxing', sans-serif;
     }
 }
 @media screen and (min-width: 500px) {
