--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -7,7 +7,7 @@ body {
 }
 @font-face {
     font-family: 'Zhimingxing';
-    src: url(C:\Users\Aegalnc\Desktop\data_journalism_competition\font.ttf);
+    src: url("font.ttf");
 }
 
 .container {
@@ -135,6 +135,25 @@ body {
     box-shadow: 0px 0px 5px rgb(151, 149, 149);
     opacity: 0.9;
     margin: 150px 10vw 0 10vw;
+}
+#after_title_blur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 200vh;
+    
+}
+.after_title_blur {
+    
+    animation: blur forwards 1s;
+    
+}
+@keyframes blur {
+    to {
+        background-color: rgb(94, 94, 95);
+        filter: blur(200px);
+    }
 }
 @media screen and (min-width: 400px) {
     .chat-container {
@@ -273,10 +292,12 @@ body {
     font-size: large;
     white-space: nowrap;
     font-family: 'Zhimingxing', sans-serif;
+    z-index: 1;
 }
 .magnify {
     animation: magnify 2s forwards;
     display: inline-block;
+    
 }
 @keyframes magnify {
     to {
@@ -445,12 +466,20 @@ body {
     transform: translate(50%, 0);
     padding: 6px 20px 6px 20px;
     color: #a6a7a9;
-    animation: blink infinite 2s;
     cursor: pointer;
+    animation: blink infinite 2s;
+}
+.prompt:hover {
+    animation: light forwards 1s;
 }
 @keyframes blink {
     50% {
         opacity: 0;
+    }
+}
+@keyframes light {
+    to {
+        opacity: 1;
     }
 }
 
