--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -847,11 +847,17 @@ body {
     opacity: 0;
 }
 
-.reality_virture {
-    width: 100vw;
-    height: 297vh;
-    position: relative;
+
+.blogger {
+    white-space: pre-wrap;
+    width: 80%;
+    color: #e7e9ec;
+    font-size: 1.2em;
+    text-indent: 2em;
+    margin: 10px 20px; 
 }
+
+
 
 .phone {
     width: 150px;
@@ -878,15 +884,56 @@ body {
 }
 #reature_background {
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
-#reality_charactor {
-    width: 100px;
-    height: 100px;
+
+.pure_student {
+    width: 600px;
+    height: 600px;
     position: absolute;
-    right: calc(100vw / 3);
-    top: 100vh;
-    transform: translate(50%, -100%);
-    z-index: 20;
+    top: 20px;
+    opacity: 0.5;
+    transition: opacity 1s, height 1s, width 1s ;
+}
+.pure_student:first-child {
+    top: 400px;
+    left: 10px;
+}
+.reality_virture {
+    position: relative;
+    width: 100vw;
+    height: 5500px;
+    background-color: #222224;
+}
+.reality_virture img:nth-child(2) {
+    top: 700px;
+    left: 100px;
+}
+.pure_student_animation {
+    opacity: 1;
+    height: 800px;
+    width: 800px;
+}
+.reality_virture img:nth-child(3) {
+    top: 1300px;
+    right: 70px;
+    
+}
+
+.reality_virture img:nth-child(4) {
+    top: 1900px;
+    left: 100px;
+}
+.reality_virture img:nth-child(5) {
+    top: 3500px;
+    left: 100px;
+}
+.reality_virture img:nth-child(6) {
+    top: 4200px;
+    right: 70px;
+}
+.reality_virture img:nth-child(7) {
+    top: 4700px;
+    left: 100px;
 }
