--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -182,14 +182,17 @@ body {
 
 /* 渲染对话框 */
 .chat-messages {
-    width: 100%;
+    width: 110%;
     height: 70%;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .user-message-container {
     width: 100%;
     border-bottom: solid 1.5px #9e9ea0;
     display: flex;
+    margin-left: 5%;
 }
 .user-avatar {
     width: 30px;
@@ -215,6 +218,7 @@ body {
     background-color: #6F7279;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 5%;
 }
 .chatgpt-avatar {
     width: 30px;
@@ -226,6 +230,8 @@ body {
     color: #CDCCD0;
     font-size: 4em;
     line-height: 1.5;
+    max-width: 80%;
+    white-space: pre-wrap;
 }
 @media screen and (min-width: 500px) {
     .chatgpt-message {
@@ -254,18 +260,6 @@ body {
     margin: -25px 0;
     transition: z-index 1s, width 1s, height 1s, background 1s;
     display: flex;
-}
-.passage:nth-child(2) {
-    transform: translate(3%, 0);
-}
-.passage:nth-child(3) {
-    transform: translate(6%, 0);
-}
-.passage:nth-child(4) {
-    transform: translate(9%, 0);
-}
-.passage:nth-child(5) {
-    transform: translate(12%, 0);
 }
 .passage_image {
     width: 60px;
@@ -348,7 +342,7 @@ body {
     width: 70%;
     height: 9%;
     position: absolute;
-    bottom: 35%; 
+    bottom: 39%; 
     left: 5%;
     color: #e3e3e7;
 }
