--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -45,7 +45,8 @@ body {
 
 /* 专业选择 */
 #selector {
-    width: 50%;
+    width: 80%;
+    height: 70%;
     position: absolute;
     top: 0;
     background-color: rgba(30, 31, 36, 0.6);
@@ -95,8 +96,8 @@ body {
 }
 .icons{
     margin-top: 10px;
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     transform: translate(0, -50px);
 }
 @media screen and (min-width: 500px) {
@@ -125,7 +126,7 @@ body {
 
 /* gpt页面 */
 .chat-container {
-    height: 80vh;
+    height: min(1000px, 80vh);
     width: 80vw;
     position: relative;
     display: flex;
@@ -632,13 +633,14 @@ body {
 }
 .intermediary_fix_wrap {
     width: 100vw;
-    height: 200vh;
+    height: min(1500px, 200vh);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #222224;
 }
+
 .intermediary_chat_container {
     width: 60%;
     height: 80%;
@@ -857,8 +859,14 @@ body {
     font-size: large;
     color: #b7b7c4;
     opacity: 0;
+    position: relative;
 }
-
+.name {
+    position: absolute;
+    bottom: 3%;
+    right: 3%;
+    color: #6F7279;
+}
 
 .blogger {
     white-space: pre-wrap;
@@ -906,14 +914,14 @@ body {
     width: 600px;
     height: 600px;
     position: absolute;
-    top: 20px;
     opacity: 0.5;
-    transition: opacity 1s, height 1s, width 1s ;
+    transition: all 1s ;
 }
 .pure_student:first-child {
     top: 400px;
     left: 10px;
 }
+
 .reality_virture {
     position: relative;
     width: 100vw;
@@ -954,14 +962,13 @@ body {
     top: 4200px;
     left: 100px;
 }
-.reality_virture img:nth-child(8) {
+.last {
     top: 4700px;
     right: 70px;
 }
 .reality_virture img:nth-child(9) {
     top: 3200px;
-    left: 700px;
-    
+    left: 700px; 
 }
 .word {
     height: 120px;
@@ -969,3 +976,27 @@ body {
     position: absolute;
 }
 
+.death {
+    top: 5400px;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    transform: translate(-50%, 0);
+}
+
+.heavy {
+    position: absolute;
+    top: 4700px;
+    left: 50%;
+    width: 400px;
+    height: 400px;
+    transform: translate(-50%, 0);
+    display: none;
+    animation: drop 1s ease-in forwards;
+    z-index: 30;
+}
+@keyframes drop {
+    to {
+        top: 5250px;
+    }
+}
