--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -518,101 +518,38 @@ body {
     position: relative;
     background-color: #222224;
 }
-#area {
-    width: 100%;
-    text-align: center;
-    font-weight: 600;
-    font-size: 2em;
-    color: rgba(209, 198, 227, 0.5);
-}
-.company {
-    width: 100%;
-    text-align: center;
-    white-space: pre-line;
-    font-size: larger;
-    color: rgba(161, 152, 175, 0.5);
-}
-.secard {
-    height: 40%;
-    width: 50%;
-    background-color: rgba(212, 206, 206, 0.7);;
-    box-shadow: 0 0 20px rgba(219, 221, 220, 0.4);;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    animation: secard forwards 1s;
-}
-@keyframes secard {
-    to {
-        opacity: 1;
-    }
-}
-.secard_title {
-    margin: 20px 20px 20px 20px;
-    font-size: 1.5em;
-    color: #174f9f;
-    font-weight: 700;
-}
-.secard_content {
-    width: 100%;
-    display: flex;
-}
-.secard_item_title {
-    margin: 10px 20px 20px 27px;
-    color:rgb(28, 28, 28);
-    font-weight: 600;
-    font-size: 1.2em;
-}
-.secard_item {
-    margin: 10px 20px 20px 27px;
-    color: #134284;
-}
-.secard_png {
-    position: absolute;
-    height: 30px;
-    width: 30px;
-    top: 20px;
-    right: 20px;
-}
-.href {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #174f9f;
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    text-decoration: none;
-}
-.href p {
-    margin-top: 15px;
-    text-align: center;
-    color: #c1c3c7;
-}
+
 #svg-object {
     width: 100%;
     height: 100%;
-    opacity: 0;
+}
+.map img {
+    width: 50px;
+    height: 70px;
+    position: absolute;
+    bottom: 30px;
+    left: 700px;
+    border: #838597 solid 1px;
 }
 .card_wrap {
     overflow: hidden;
     position: absolute;
     width: 330px;
-    max-height: 50vh;
+    height: 90vh;
     border-radius: 30px;
     border: solid 2px rgba(128, 121, 139, 0.5);
     box-shadow: 0 0 8px rgb(28, 28, 28);
     animation: showup 0.3s forwards;
+    top: 60px;
+    left: 800px;
 }
 .card {
     width: 350px;
-    padding: 0 30px;
-    max-height: 50vh;
+    padding: 5px 20px 0 20px;
+    height: 90vh;
     overflow-Y: scroll;
-    background: radial-gradient(circle at 90% 90%, rgba(92, 86, 103, 0.3)10%, rgba(82, 74, 96, 0.3) 40%, rgba(101, 93, 118, 0.3) 60%,rgba(52, 47, 61, 0.3) 90%);
-    z-index: 1;
+    background-color: rgba(212, 206, 206, 0.7);;
+    box-shadow: 0 0 20px rgba(219, 221, 220, 0.4);
     position: relative;
 }
 /* @media screen and (min-width: 500px) {
@@ -621,6 +558,38 @@ body {
         top: 15%; 
     } 
 } */
+#area {
+    width: 100%;
+    text-align: center;
+    font-size: larger;
+    color: #2e6ad4;
+    font-weight: 700;
+    margin: 5px 0 5px 0;
+}
+#name {
+    width: 100%;
+    text-align: center;
+    font-size: large;
+    color: #336fd7;
+    font-weight: 600;
+    margin: 5px 0 5px 0;
+}
+.content {
+    display: flex;
+    width: 100%;
+}
+.content > * > p {
+    font-size: medium;
+    color: #123d85;
+    margin: 3px 0 3px 0;
+}
+.left  {
+    width: 50%;
+    margin: 0 20px 0 0;
+}
+.right{
+    width: 50%;
+}
 .test {
     height: 50px;
     width: 100px;
