--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -547,8 +547,7 @@ body {
     width: 350px;
     padding: 5px 20px 0 20px;
     height: 90vh;
-    background-color: rgba(212, 206, 206, 0.7);;
-    box-shadow: 0 0 20px rgba(219, 221, 220, 0.4);
+    background-color: rgb(255 255 255 / 84%);    box-shadow: 0 0 20px rgba(219, 221, 220, 0.4);
     border-radius: 30px;
     border: solid 2px rgba(128, 121, 139, 0.5);
     position: relative;
@@ -562,13 +561,19 @@ body {
         top: 15%; 
     } 
 } */
-#area {
+.area {
     width: 100%;
     text-align: center;
     font-size: larger;
-    color: #2e6ad4;
+    color: #2060cd;
     font-weight: 700;
     margin: 5px 0 5px 0;
+}
+.comment {
+    margin: 20px 5% 10px 5%; 
+    width: 90%;
+    font-weight: 600;
+    color: #355a9e;
 }
 .company_name {
     width: 100%;
@@ -600,6 +605,9 @@ body {
     background-color: #a00a78;
     position: absolute;
     top: 0;
+}
+.comment {
+
 }
 @keyframes showup {
     to {
