--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -523,6 +523,10 @@ body {
     width: 100%;
     height: 100%;
 }
+#comment_object {
+    width: 100%;
+    height: 100%;
+}
 .map img {
     width: 50px;
     height: 70px;
