--- a/chatgpt-style.css
+++ b/chatgpt-style.css
@@ -1115,6 +1115,7 @@ body {
     top: 100px;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 20;
 }
 .friend_btn {
     position: absolute;
@@ -1125,4 +1126,66 @@ body {
     width: 250px;
     height: 50px;
     background-color: transparent;
+    z-index: 21;
+}
+.people {
+    height: 150px;
+    width: 150px;
+    position: absolute;
+    left: 350px;
+    display: none;
+    top: 0
+}
+.ad {
+    width: 30%;
+    color: #aaabb5;
+    position: absolute;
+    top: 50px;
+    left: 500px;
+    border: #acadb1 solid 2px;
+    padding: 20px;
+    opacity: 0;
+    border-radius: 10px;
+}
+.money {
+    color: #aaabb5;
+    position: absolute;
+    top: 570px;
+    left: 500px;
+    opacity: 0;
+    border: #acadb1 solid 2px;
+    border-radius: 10px;
+    padding: 10px
+}
+.ad:after {
+    position: absolute;
+    top: 10px;
+    left: -20px;
+    content: '';
+    width: 0;
+    height: 0;
+    border-right: 10px solid #aaabb5;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-top: 10px solid transparent;
+}
+.money:after {
+    position: absolute;
+    top: 10px;
+    left: -20px;
+    content: '';
+    width: 0;
+    height: 0;
+    border-right: 10px solid #aaabb5;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-top: 10px solid transparent;
+}
+.adp {
+    width: 200px;
+    height: 400px;
+    position: absolute;
+    top: 150px;
+    left: 950px;
+    opacity: 0;
 }
